--- a/package.json
+++ b/package.json
@@ -9,21 +9,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "fbjs": "0.8.17",
-    "immutable": "3.8.2",
-    "moment": "^2.22.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-calendars": "^1.19.4",
-    "react-native-firebase": "4.3.4",
-    "react-native-image-crop-picker": "^0.20.3",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
-    "react-navigation": "2.6.2",
-    "react-redux": "5.0.7",
-    "redux": "4.0.0",
-    "redux-observable": "1.0.0",
-    "rxjs": "6.2.1",
-    "typesafe-actions": "2.0.4"
+    "react-navigation": "2.6.2"
   },
   "devDependencies": {
     "@babel/core": "7.0.0-beta.47",
@@ -31,7 +21,6 @@
     "@types/react": "16.4.6",
     "@types/react-native": "0.55.28",
     "@types/react-navigation": "2.0.10",
-    "@types/react-redux": "6.0.3",
     "@types/react-test-renderer": "16.0.1",
     "babel-core": "6.26.3",
     "babel-jest": "23.2.0",
