--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "react-native": "0.56.0",
     "react-native-calendars": "^1.19.4",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
-    "react-navigation": "2.6.2"
+    "react-navigation": "^2.8.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0-beta.47",
     "@types/jest": "23.1.4",
     "@types/react": "16.4.6",
     "@types/react-native": "0.55.28",
-    "@types/react-navigation": "2.0.10",
+    "@types/react-navigation": "^2.0.11",
     "@types/react-test-renderer": "16.0.1",
     "babel-core": "6.26.3",
     "babel-jest": "23.2.0",
@@ -30,7 +30,6 @@
     "react-native-dotenv": "https://github.com/adamivancza/react-native-dotenv",
     "react-native-typescript-transformer": "1.2.10",
     "react-test-renderer": "16.4.1",
-    "redux-devtools-extension": "^2.13.5",
     "ts-jest": "23.0.0",
     "tslint": "5.10.0",
     "tslint-config-airbnb": "5.9.2",
