--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "appcenter-crashes": "^1.6.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-calendars": "^1.19.4",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
     "react-navigation": "^2.8.0"
   },
@@ -26,17 +25,16 @@
     "@types/react-navigation": "^2.0.11",
     "@types/react-test-renderer": "16.0.1",
     "babel-core": "6.26.3",
-    "babel-jest": "23.2.0",
+    "babel-jest": "23.4.0",
     "babel-preset-react-native": "5",
-    "jest": "23.3.0",
-    "prop-types": "15.6.2",
+    "jest": "^23.4.1",
     "react-native-dotenv": "https://github.com/adamivancza/react-native-dotenv",
     "react-native-typescript-transformer": "1.2.10",
     "react-test-renderer": "16.4.1",
-    "ts-jest": "23.0.0",
-    "tslint": "5.10.0",
+    "ts-jest": "23.0.1",
+    "tslint": "5.11.0",
     "tslint-config-airbnb": "5.9.2",
-    "tslint-config-prettier": "^1.13.0",
+    "tslint-config-prettier": "^1.14.0",
     "typescript": "2.9.2"
   },
   "jest": {
