--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["react-native", "module:react-native-dotenv"]
+  "presets": ["react-native", "module:react-native-dotenv"],
+  "sourceMaps": "inline"
 }
