--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scheduler-react-native",
+  "name": "viewer",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -26,10 +26,9 @@
     "@types/react-test-renderer": "16.0.1",
     "babel-core": "6.26.3",
     "babel-jest": "23.4.0",
-    "babel-preset-react-native": "5",
+    "babel-preset-react-native": "^4.0.0",
     "jest": "^23.4.1",
     "react-addons-test-utils": "^15.6.2",
-    "react-native-dotenv": "https://github.com/adamivancza/react-native-dotenv",
     "react-native-typescript-transformer": "1.2.10",
     "react-test-renderer": "16.4.1",
     "ts-jest": "23.0.1",
@@ -40,9 +39,11 @@
   },
   "jest": {
     "preset": "react-native",
+    "moduleDirectories": ["node_modules", "src"],
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "tsconfig.jest.json"
+        "tsConfigFile": "tsconfig.test.json",
+        "useBabelrc": true
       }
     },
     "moduleFileExtensions": [
@@ -51,15 +52,17 @@
       "js"
     ],
     "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
       "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest",
       "^.+\\.tsx?$": "ts-jest"
     },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "testPathIgnorePatterns": [
       "\\.snap$",
       "<rootDir>/node_modules/"
     ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|react-navigation|react|react-native-keyboard-aware-scroll-view/)"
+    ],    
     "cacheDirectory": ".jest/cache",
     "setupFiles": [
       "./node_modules/appcenter-analytics/test/AppCenterAnalyticsMock.js",
